; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_gkhash.c_parse_raw_data.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_gkhash.c_parse_raw_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @parse_raw_data(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %8 [
    i32 128, label %5
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = call i32* @parse_raw_str_data(i32 %6)
  store i32* %7, i32** %3, align 8
  br label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = call i32* @parse_raw_num_data(i32 %9)
  store i32* %10, i32** %3, align 8
  br label %11

11:                                               ; preds = %8, %5
  %12 = load i32*, i32** %3, align 8
  ret i32* %12
}

declare dso_local i32* @parse_raw_str_data(i32) #1

declare dso_local i32* @parse_raw_num_data(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
